5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1638_2729.log
== SUBMITION (2019-04-24 20:33:41) 
-- CODE:
n1 = int(input("Digite o numero: "))
n2 = int(input("Digite o numero: "))
if((n1*n2)%2 != 0 ):
	print(n1 + n2)
else:
	print(n2 - n1)
-- EXECUTION TIME:
0.140435
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:33:44) 
-- CODE:
n1 = int(input("Digite o numero: "))
n2 = int(input("Digite o numero: "))
if((n1*n2)%2 != 0 ):
	print(n1 + n2)
else:
	print(n2 - n1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:34:15) 
-- CODE:
n1 = int(input("Digite o numero: "))
n2 = int(input("Digite o numero: "))
if(((n1*n2)%2) != 0 ):
	print(n1 + n2)
else:
	print(n2 - n1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 20:34:55) 
-- CODE:
n1 = int(input("Digite o numero: "))
n2 = int(input("Digite o numero: "))
if(((n1*n2)%2) = 0 ):
	print(n1 + n2)
else:
	print(n2 - n1)
-- EXECUTION TIME:
0.14358
-- ERROR:
  File "/home/codebench/codes/1638/2729/main.py", line 3
    if(((n1*n2)%2) = 0 ):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:34:59) 
-- CODE:
n1 = int(input("Digite o numero: "))
n2 = int(input("Digite o numero: "))
if(((n1*n2)%2) = 0 ):
	print(n1 + n2)
else:
	print(n2 - n1)
-- ERROR:
File "XXXX", line 3
    if(((n1*n2)%2) = 0 ):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 20:35:08) 
-- CODE:
n1 = int(input("Digite o numero: "))
n2 = int(input("Digite o numero: "))
if(((n1*n2)%2) == 0 ):
	print(n1 + n2)
else:
	print(n2 - n1)
-- EXECUTION TIME:
0.16682
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
